--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@
     box-sizing: border-box;
     
 }
+html{
+    scroll-behavior: smooth;
+}
 li{
     list-style: none;
 }   
@@ -102,9 +105,14 @@ a{
 .title::before, .title::after{
   content: "";
   height: 2px;
-  background-color: black;
-  display: block;
+  background-color: black;  
+  width: 50px;
 }
+.title::before{ 
+    transform: translateX(73px);
+
+}
+
 .icon{
     width: 100%;
     height: 30px;
@@ -123,6 +131,7 @@ a{
     height: auto;
     background: url("https://walkbesidemeblog.com/wp-content/uploads/2021/09/PlovUzebkistan-Walk-Beside-Me-Blog.jpg")no-repeat center;
     background-size: cover;
+
    
 }
 .product-card-wrap{
@@ -191,8 +200,10 @@ a{
     justify-content: space-between;
     align-items: center;
     border-bottom: 5px solid crimson;
-
-
+}
+.logo-box{
+  
+    text-align: center;
 }
 h6{
     font-family: 'Cookie';
@@ -201,15 +212,13 @@ h6{
     font-style: bold;
 }
 .text{
-    
-    display:grid;
-    grid-template-columns: repeat(3, 0.7fr);
-    display: flex;
-    column-count: 1rem;
     font-size: 10px;
+    display: flex;
+    align-items: center;    
 }
 .text::before, .text::after{
     content: "";
+    width: 30px;
     height: 2px;
     background-color: black;
     display: block;
@@ -244,10 +253,44 @@ h6{
         text-align: center;
         transition: 0.3s;
         padding: 20px 0;
+        z-index: 99;
 
     }
    
     .nav-menu.active{
          left: 10px;
     }
+  
+    .product-card-wrap,
+    .product-card-wrap.card-2,
+    .product-card-wrap.card-3{
+        justify-content: center;
+        padding: 5px 0;
+    
+    }
+    
+
+}
+@media(max-width:425px){
+    .circle{
+        width: 70px;
+        height: 70px;
+    }
+    .title{
+        
+        text-align: center;
+        display: block;
+        
+    
+    }
+    .icon i{
+       
+        font-size: 30px;
+    
+    }
+    .footer-container{
+        flex-direction: column;
+        gap: 15px;
+    }
+    
 }
